<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Triangulo">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/triangulo"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="90dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/base" />

        <EditText
            android:id="@+id/txtBase"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="112dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/altura" />

        <EditText
            android:id="@+id/txtAltura"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calcular"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpiar"
            android:text="@string/borrar" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="guardar"
            android:text="@string/guardar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center"
            android:text="@string/resultado"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblResultado"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>