<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaOperacion">

    <TableLayout
        android:id="@+id/tblOpercaciones"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:id="@+id/tblrEnuncidos"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/operacion"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:text="@string/dato"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>